# rub-vvz-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: release-template.md
.github/workflows/: ci.yml  release.yml
Formula/: rub-vvz.rb
docs/: homebrew.md  releasing.md
src/: cli.rs  client.rs  lib.rs  main.rs  models.rs  parsing.rs
tests/: cli.rs  parsing.rs
